# ai-effective

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: RoleProfileBuilder.jsx  ScoreDisplay.jsx  TASScorer.jsx
src/ai_effective/: __init__.py  cli.py  store.py
src/ai_effective/api/: models.py  server.py
src/ai_effective/embeddings/: __init__.py  encoder.py
src/ai_effective/role_profile/: __init__.py  builder.py  extractor.py  taxonomy.py
src/ai_effective/scoring/: __init__.py  heuristics.py  tas.py
