[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-effective"
version = "0.1.0"
description = "Role-aware AI usage efficiency scoring — no frontier LLM calls required"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.7.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
]

[project.scripts]
ai-effective = "ai_effective.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_effective"]
